--- a/index.html
+++ b/index.html
@@ -419,11 +419,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/ website1 (1).png" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/website1 (1).png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Website1</h4>
                   <p> Gadilo Bharat.com</p>
-                  <a href="assets/img/portfolio/ website1 (1).png" title="" data-gallery="portfolio-gallery-app"
+                  <a href="assets/img/portfolio/website1 (1).png" title="" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://gadilobharat.com/" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
@@ -434,11 +434,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/ website1 (2).png" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/website1 (2).png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Website2</h4>
                   <p> Enclousure</p>
-                  <a href="assets/img/portfolio/ website1 (2).png" title="" data-gallery="portfolio-gallery-app"
+                  <a href="assets/img/portfolio/website1 (2).png" title="" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://enclosureapp.com/" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
@@ -448,11 +448,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/ website1 (3).png" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/website1 (3).png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Website3</h4>
                   <p> Online Grossary Shop</p>
-                  <a href="assets/img/portfolio/ website1 (3).png" title="" data-gallery="portfolio-gallery-app"
+                  <a href="assets/img/portfolio/website1 (3).png" title="" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="./website-two.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
@@ -463,11 +463,11 @@
             <!-- --------------------------- -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/ website1 (4).png" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/website1 (4).png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Website4</h4>
                   <p> PortFolio</p>
-                  <a href="assets/img/portfolio/ website1 (4).png" title="" data-gallery="portfolio-gallery-app"
+                  <a href="assets/img/portfolio/website1 (4).png" title="" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="index.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
@@ -478,11 +478,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/ website1 (5).png" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/website1 (5).png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Website5</h4>
                   <p> Wikipedia</p>
-                  <a href="assets/img/portfolio/ website1 (5).png" title="" data-gallery="portfolio-gallery-app"
+                  <a href="assets/img/portfolio/website1 (5).png" title="" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="./website-one.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
@@ -491,11 +491,11 @@
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/ myntra1 (10).png" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/myntra1 (10).png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Website6</h4>
                   <p> Myntra Clone Website</p>
-                  <a href="assets/img/portfolio/ myntra1 (10).png" title="" data-gallery="portfolio-gallery-app"
+                  <a href="assets/img/portfolio/myntra1 (10).png" title="" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="./website-four.html" title="More Details" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
@@ -547,11 +547,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/ dash3 (1).png" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/dash3 (1).png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Dashboard3</h4>
                   <p> Gadilo Bharat</p>
-                  <a href="assets/img/portfolio/ dash3 (1).png" title="Dashboard3"
+                  <a href="assets/img/portfolio/dash3 (1).png" title="Dashboard3"
                     data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="./dashboard-three.html" title="More Details" class="details-link"><i
@@ -563,11 +563,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/ dash4 (2).png" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/dash4 (2).png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Dashboard4</h4>
                   <p> Color Prediction</p>
-                  <a href="assets/img/portfolio/ dash4 (2).png" title="Dashboard4"
+                  <a href="assets/img/portfolio/dash4 (2).png" title="Dashboard4"
                     data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="./dashboard-four.html" title="More Details" class="details-link"><i
