--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -101,7 +101,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
         <p> I am a passionate <strong> Frontend Developer </strong>with experience in building responsive, user-friendly
-          web applications. I specialize in HTML, CSS, JavaScript, and modern frameworks like Bootstrap to create
+          web applications. I specialize in <span ><b>HTML5, CSS3, JavaScript, and Bootstrap, Restful APIs , Responsive Design , JSON jQuery , Ajax</span></b>and modern frameworks like Bootstrap to create
           seamless and interactive user experiences.
 
           With a keen eye for design and functionality, I focus on writing clean, maintainable code and ensuring
@@ -125,7 +125,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>17 July 2003</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span> 7447576106</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span> Maharastra , Pune</span></li>
                 </ul>
@@ -135,7 +135,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BCS</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
-                    <span>dnyaneshwaripotghan@@gmail.com</span>
+                    <span>dnyaneshwaripotghan@gmail.com</span>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
@@ -202,6 +202,14 @@
               <span class="skill"><span>JavaScript</span> <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="96" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div><!-- End Skills Item -->
+
+             <div class="progress">
+              <span class="skill"><span>React JS</span> <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div><!-- End Skills Item -->
@@ -341,7 +349,7 @@
             </div>
             <div class="resume-item">
               <h4> 10th SSC</h4>
-              <h5>2020 - 2021</h5>
+              <h5>2018 - 2019</h5>
               <p><em>Percentage : 72.80 </em></p>
               <p>Pune Board </p>
             </div><!-- Edn Resume Item -->
@@ -351,16 +359,16 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4> Web / UI Developer</h4>
-              <h5>2024-2025 - Present</h5>
-              <p><em> Appzia Technology Viman Nagar Pune</em></p>
+              <h4> Web / UI Developer (Full Time )</h4>
+              <h5>Dec2024-May2025</h5>
+              <p><em> Appzia Technology</em></p>
               <ul>
                 <li> As a Web Developer, I was responsible for designing, developing, and maintaining dynamic and
-                  responsive web applications. My role involved working with front-end and back-end technologies to
+                  responsive web applications. My role involved working with front-end and back-end technologies to(APIs)
                   create seamless user experiences. </li>
-                <li>As a Front-End Developer at Appzia, I successfully designed and developed 10+ web projects, creating
+                <li>As a Front-End Developer at Appzia, I successfully designed and developed <b> 10+</b> web projects, creating
                   responsive and user-friendly interfaces. My role involved translating UI/UX designs into functional
-                  web applications using HTML, CSS, JavaScript, and Bootstrap. I worked closely with designers and
+                  web applications using  <span ><b>HTML5, CSS3, JavaScript, and Bootstrap, Restful APIs , Responsive Design , JSON jQuery , Ajax</span></b>. I worked closely with designers and
                   backend developers to build interactive and engaging web experiences while ensuring cross-browser
                   compatibility and optimized performance. </li>
                   <li> Throughout my tenure, I focused on enhancing website speed,
@@ -373,9 +381,9 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4> Frontend Developer</h4>
-              <h5>2024</h5>
-              <p><em> BrightLink Info Technology PVR LTD Karve Nagar Pune</em></p>
+              <h4> Frontend Developer(Intern)</h4>
+              <h5>Jun-2024 - Nov-2024</h5>
+              <p><em> Appzia Technology Pune</em></p>
               <ul>
                 <li> As a Front-End Developer, I was responsible for creating visually appealing, responsive, and
                   user-friendly web applications. My role involved translating UI/UX designs into functional web
@@ -415,8 +423,22 @@
             <li data-filter=".filter-books">Books</li> -->
           </ul><!-- End Portfolio Filters -->
 
- 
-<div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/website1 (1).png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Website1</h4>
+                  <p> Gadilo Bharat.com</p>
+                  <a href="assets/img/portfolio/website1 (1).png" title="" data-gallery="portfolio-gallery-app"
+                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://gadilobharat.com/" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
@@ -531,16 +553,29 @@
 
             
 
-          
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/ dash3 (1).png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Dashboard3</h4>
+                  <p> Gadilo Bharat</p>
+                  <a href="assets/img/portfolio/ dash3 (1).png" title="Dashboard3"
+                    data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i
+                      class="bi bi-zoom-in"></i></a>
+                  <a href="./dashboard-three.html" title="More Details" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
 
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/dash4 (2).png" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/ dash4 (2).png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Dashboard4</h4>
                   <p> Color Prediction</p>
-                  <a href="assets/img/portfolio/dash4 (2).png" title="Dashboard4"
+                  <a href="assets/img/portfolio/ dash4 (2).png" title="Dashboard4"
                     data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i
                       class="bi bi-zoom-in"></i></a>
                   <a href="./dashboard-four.html" title="More Details" class="details-link"><i
