--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 <li> As a Web Developer, I was responsible for designing, developing, and maintaining dynamic and
                   responsive web applications. My role involved working with front-end and back-end technologies to(APIs)
                   create seamless user experiences. </li>
-                <li>As a Front-End Developer at Appzia, I successfully designed and developed <b> 10+</b> web projects, creating
+                <li>As a Front-End Developer at Appzia, I successfully designed and developed <b>Many</b> web projects, creating
                   responsive and user-friendly interfaces. My role involved translating UI/UX designs into functional
                   web applications using  <span ><b>HTML5, CSS3, JavaScript, and Bootstrap, Restful APIs , Responsive Design , JSON jQuery , Ajax</span></b>. I worked closely with designers and
                   backend developers to build interactive and engaging web experiences while ensuring cross-browser
