--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span> 7447576106</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span> Maharastra , Pune</span></li>
+           <li><i class="bi bi-chevron-right"></i> <strong>GitHub:</strong> <a> https://github.com/Dnyaneshwari-potghan/Frontend--Project </a></li>
+
                 </ul>
               </div>
               <div class="col-lg-6">
